Fixed jumping

--- a/src/components/Patrol.css
+++ b/src/components/Patrol.css
@@ -1,9 +1,14 @@
 .contact {
-  margin-top: 3em;
-  margin-bottom: 3em;
+  margin-top: 1em;
+  margin-bottom: 2m;
   text-align: center;
 }
 
 .button {
   margin-top: 3em;
+}
+
+.searchBox {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
 }
